@@ -19,7 +19,6 @@ define('JROUTER_MODE_SEF', 1);
 /**
  * Class to create and parse routes
  *
- * @abstract
  * @package 	Joomla.Framework
  * @subpackage	Application
  * @since		1.5
@@ -29,36 +28,31 @@ class JRouter extends JObject
 	/**
 	 * The rewrite mode
 	 *
-	 * @access protected
 	 * @var integer
 	 */
-	var $_mode = null;
+	protected $_mode = null;
 
 	/**
 	 * An array of variables
 	 *
-	 * @access protected
 	 * @var array
 	 */
-	var $_vars = array();
+	protected $_vars = array();
 
 	/**
 	 * An array of rules
 	 *
-	 * @access protected
 	 * @var array
 	 */
-	var $_rules = array(
+	protected $_rules = array(
 		'build' => array(),
 		'parse' => array()
 	);
 
 	/**
 	 * Class constructor
-	 *
-	 * @access public
 	 */
-	function __construct($options = array())
+	public function __construct($options = array())
 	{
 		if (array_key_exists('mode', $options)) {
 			$this->_mode = $options['mode'];
@@ -71,8 +65,8 @@ class JRouter extends JObject
 	 * Returns the global JRouter object, only creating it if it
 	 * doesn't already exist.
 	 *
-	 * @param string  $client  The name of the client
-	 * @param array   $options An associative array of options
+	 * @param	string	The name of the client
+	 * @param	array	An associative array of options
 	 * @return	JRouter	A router object.
 	 */
 	public static function getInstance($client, $options = array())
@@ -83,22 +77,18 @@ class JRouter extends JObject
 			$instances = array();
 		}
 
-		if (empty($instances[$client]))
-		{
+		if (empty($instances[$client])) {
 			//Load the router object
 			$info = &JApplicationHelper::getClientInfo($client, true);
 
 			$path = $info->path.DS.'includes'.DS.'router.php';
-			if (file_exists($path))
-			{
+			if (file_exists($path)) {
 				require_once $path;
 
 				// Create a JRouter object
 				$classname = 'JRouter'.ucfirst($client);
 				$instance = new $classname($options);
-			}
-			else
-			{
+			} else {
 				$error = JError::raiseError(500, 'Unable to load router: '.$client);
 				return $error;
 			}
@@ -135,10 +125,10 @@ class JRouter extends JObject
 	/**
 	 * Function to convert an internal URI to a route
 	 *
-	 * @param	string	$string	The internal URL
+	 * @param	string	The internal URL
 	 * @return	string	The absolute search engine friendly URL
 	 */
-	function build($url)
+	public function build($url)
 	{
 		//Create the URI object
 		$uri = &$this->_createURI($url);
@@ -161,32 +151,29 @@ class JRouter extends JObject
 
 	/**
 	 * Get the router mode
-	 *
-	 * @access public
 	 */
-	function getMode() {
+	public function getMode()
+	{
 		return $this->_mode;
 	}
 
 	/**
 	 * Get the router mode
-	 *
-	 * @access public
 	 */
-	function setMode($mode) {
+	public function setMode($mode)
+	{
 		$this->_mode = $mode;
 	}
 
 	/**
 	 * Set a router variable, creating it if it doesn't exist
 	 *
-	 * @access	public
-	 * @param	string  $key    The name of the variable
-	 * @param	mixed   $value  The value of the variable
-	 * @param	boolean $create If True, the variable will be created if it doesn't exist yet
+	 * @param	string	The name of the variable
+	 * @param	mixed	The value of the variable
+	 * @param	boolean	If True, the variable will be created if it doesn't exist yet
  	 */
-	function setVar($key, $value, $create = true) {
-
+	public function setVar($key, $value, $create = true)
+	{
 		if (!$create && array_key_exists($key, $this->_vars)) {
 			$this->_vars[$key] = $value;
 		} else {
@@ -197,12 +184,11 @@ class JRouter extends JObject
 	/**
 	 * Set the router variable array
 	 *
-	 * @access	public
-	 * @param	array   $vars   An associative array with variables
-	 * @param	boolean $create If True, the array will be merged instead of overwritten
+	 * @param	array	An associative array with variables
+	 * @param	boolean	If True, the array will be merged instead of overwritten
  	 */
-	function setVars($vars = array(), $merge = true) {
-
+	public function setVars($vars = array(), $merge = true)
+	{
 		if ($merge) {
 			$this->_vars = array_merge($this->_vars, $vars);
 		} else {
@@ -213,11 +199,10 @@ class JRouter extends JObject
 	/**
 	 * Get a router variable
 	 *
-	 * @access	public
-	 * @param	string $key   The name of the variable
-	 * $return  mixed  Value of the variable
+	 * @param	string	The name of the variable
+	 * @return  mixed	Value of the variable
  	 */
-	function getVar($key)
+	public function getVar($key)
 	{
 		$result = null;
 		if (isset($this->_vars[$key])) {
@@ -229,20 +214,19 @@ class JRouter extends JObject
 	/**
 	 * Get the router variable array
 	 *
-	 * @access	public
 	 * @return  array An associative array of router variables
  	 */
-	function getVars() {
+	public function getVars()
+	{
 		return $this->_vars;
 	}
 
 	/**
 	 * Attach a build rule
 	 *
-	 * @access	public
-	 * @param   callback $callback The function to be called.
+	 * @param   callback	The function to be called.
  	 */
-	function attachBuildRule($callback)
+	public function attachBuildRule($callback)
 	{
 		$this->_rules['build'][] = $callback;
 	}
@@ -250,65 +234,47 @@ class JRouter extends JObject
 	/**
 	 * Attach a parse rule
 	 *
-	 * @access	public
-	 * @param   callback $callback The function to be called.
+	 * @param   callback	The function to be called.
  	 */
-	function attachParseRule($callback)
+	public function attachParseRule($callback)
 	{
 		$this->_rules['parse'][] = $callback;
 	}
 
 	/**
 	 * Function to convert a raw route to an internal URI
-	 *
-	 * @abstract
-	 * @access protected
 	 */
-	function _parseRawRoute(&$uri)
+	protected function _parseRawRoute(&$uri)
 	{
 		return false;
 	}
 
 	/**
 	 *  Function to convert a sef route to an internal URI
-	 *
-	 * @abstract
-	 * @access protected
 	 */
-	function _parseSefRoute(&$uri)
+	protected function _parseSefRoute(&$uri)
 	{
 		return false;
 	}
 
 	/**
 	 * Function to build a raw route
-	 *
-	 * @abstract
-	 * @access protected
 	 */
-	function _buildRawRoute(&$uri)
+	protected function _buildRawRoute(&$uri)
 	{
-
 	}
 
 	/**
 	 * Function to build a sef route
-	 *
-	 * @abstract
-	 * @access protected
 	 */
-	function _buildSefRoute(&$uri)
+	protected function _buildSefRoute(&$uri)
 	{
-
 	}
 
 	/**
 	 * Process the parsed router variables based on custom defined rules
-	 *
-	 * @abstract
-	 * @access protected
 	 */
-	function _processParseRules(&$uri)
+	protected function _processParseRules(&$uri)
 	{
 		$vars = array();
 
@@ -321,11 +287,8 @@ class JRouter extends JObject
 
 	/**
 	 * Process the build uri query data based on custom defined rules
-	 *
-	 * @abstract
-	 * @access protected
 	 */
-	function _processBuildRules(&$uri)
+	protected function _processBuildRules(&$uri)
 	{
 		foreach($this->_rules['build'] as $rule) {
 			call_user_func_array($rule, array(&$this, &$uri));
@@ -334,18 +297,14 @@ class JRouter extends JObject
 
 	/**
 	 * Create a uri based on a full or partial url string
-	 *
-	 * @access	protected
 	 * @return  JURI  A JURI object
  	 */
-	function _createURI($url)
+	protected function _createURI($url)
 	{
 		// Create full URL if we are only appending variables to it
-		if (substr($url, 0, 1) == '&')
-		{
+		if (substr($url, 0, 1) == '&') {
 			$vars = array();
-			if (strpos($url, '&amp;') !== false)
-			{
+			if (strpos($url, '&amp;') !== false) {
 			   $url = str_replace('&amp;','&',$url);
 			}
 
@@ -353,8 +312,7 @@ class JRouter extends JObject
 
 			$vars = array_merge($this->getVars(), $vars);
 
-			foreach($vars as $key => $var)
-			{
+			foreach($vars as $key => $var) {
 				if ($var == "") {
 					unset($vars[$key]);
 				}
@@ -370,11 +328,10 @@ class JRouter extends JObject
 	/**
 	 * Encode route segments
 	 *
-	 * @access	protected
 	 * @param   array 	An array of route segments
 	 * @return  array
  	 */
-	function _encodeSegments($segments)
+	protected function _encodeSegments($segments)
 	{
 		$total = count($segments);
 		for ($i=0; $i<$total; $i++) {
@@ -387,11 +344,10 @@ class JRouter extends JObject
 	/**
 	 * Decode route segments
 	 *
-	 * @access	protected
 	 * @param   array 	An array of route segments
 	 * @return  array
  	 */
-	function _decodeSegments($segments)
+	protected function _decodeSegments($segments)
 	{
 		$total = count($segments);
 		for ($i=0; $i<$total; $i++)  {
