@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+18-Jan-2010 Andrew Eddie
+ # Fixed PHP notice when invalid itemid processed by JRouterSite; JRouter* code-formatting.
+
 16-Jan-2010 Mark Dexter
 ^ Partial refactoring of com_contact
 ^ Work on com_content layouts (Angie Radtke)
